--- a/src/index.html
+++ b/src/index.html
@@ -24,24 +24,39 @@
               src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=1060"
               alt="temporaryimg"
             />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Laboriosam, et.
-            </p>
+            <div class="header-text">
+              <h3 class="header-title">Nom du restaurant</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Laboriosam, et.
+              </p>
+            </div>
           </article>
           <article id="restaurant2">
-            <img src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=1060" alt="temporaryimg" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Laboriosam, et.
-            </p>
+            <img
+              src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=1060"
+              alt="temporaryimg"
+            />
+            <div class="header-text">
+              <h3 class="header-title">Nom du restaurant</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Laboriosam, et.
+              </p>
+            </div>
           </article>
           <article class="restaurant1-3">
-            <img src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=1060" alt="temporaryimg" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Laboriosam, et.
-            </p>
+            <img
+              src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=1060"
+              alt="temporaryimg"
+            />
+            <div class="header-text">
+              <h3 class="header-title">Nom de restaurant</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Laboriosam, et.
+              </p>
+            </div>
           </article>
         </section>
       </nav>
