feat move index.html

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                     <img src="" alt="">
                     <p></p>
                 </article>
-                <article id="resaurant2">
+                <article id="restaurant2">
                     <img src="" alt="">
                     <p></p>
                 </article>
@@ -44,7 +44,7 @@
                 <fieldset>
                     <ul>
                     <li>
-                        <input type="radio" id="radio-français" name="specilities-radio" value="fr">
+                        <input type="radio" id="radio-français" name="filter-radio" value="fr">
                         <label for="radio-français">Terroir français</label> 
                     </li>
                     <li>
@@ -113,17 +113,19 @@
             </fieldset>
             </form>
             </details>
-            <article class="card-restaurant">
-                <img src="" alt="">
-                <h3>Sakuran San</h3>
-                <ul>
-                    <li id="card-name">Ville : Bordeaux</li>
-                    <li id="card-specialities">Spécialités : Asiatique</li>
-                    <li id="card-hour">Heures d'ouvertures : midi</li>
-                    <li id="card-price">Fourchette de prix : 25€ - 50€</li>
-                    <li id="card-rating">Note : ❤️❤️❤️</li>
-                </ul>
-            </article>
+            <section class="cards">
+                <article class="card-restaurant">
+                    <img src="https://images.pexels.com/photos/2098085/pexels-photo-2098085.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="assiette de sushis" class="picture-restaurant">
+                    <ul class="informations-restaurant">
+                        <li class="card-name">Sakura San</li>
+                        <li class="card-adress">Adresse : Bordeaux</li>
+                        <li class="card-specialities">Spécialités : Asiatique</li>
+                        <li class="card-hour">Heures d'ouvertures : midi</li>
+                        <li class="card-price">Fourchette de prix : 25€ - 50€</li>
+                        <li class="card-rating">Note : ❤️❤️❤️</li>
+                    </ul>
+                </article>
+            </section>
         </section>
             <section>
                 <form>
