feat : modification of js/css/html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <title>Crousti Eats | référencement des restaurants bordelais</title>
         
     <meta charset="UTF-8">
-    <meta http-esquiv=-UA-Compatible" content="IE=edge">
+    <meta http-esquiv="-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow" />
     <meta name="description" content="160carac" />
-
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="src/style.css" />
 </head>
 
 <body>
@@ -200,7 +199,7 @@
         <span>Image by <a>Pexel</a></span>
     </footer>
 
-<script src="script.js"></script>
+<script src="src/script.js"></script>
 
 </body>
 
