--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="description" content="160carac" />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
 </head>
 
 <body>
@@ -127,7 +127,7 @@
             </article>
         </section>
             <section>
-            <form >
+            <form id="add-restaurant">
                 <fieldset>
                     <h3 id="title-form">Une adresse à partager? Remplis ce formulaire.</h3>
                 <ul class="liste">
@@ -198,7 +198,7 @@
         <span>Image by <a>Pexel</a></span>
     </footer>
 
-<script src="script.js"></script>
+<script src=".src/script.js"></script>
 
 </body>
 
