"feat: add modified html"

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>Crousti Eats | référencement des restaurants bordelais</title>
         
     <meta charset="UTF-8">
-    <meta http-esquiv="-UA-Compatible" content="IE=edge">
+    <meta http-esquiv=-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow" />
     <meta name="description" content="160carac" />
 
     <link rel="stylesheet" href="./src/style.css" />
-
 </head>
 
 <body>
@@ -115,19 +114,17 @@
             </fieldset>
             </form>
             </details>
-            <section class="cards">
-                <article class="card-restaurant">
-                    <img src="https://images.pexels.com/photos/2098085/pexels-photo-2098085.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="assiette de sushis" class="picture-restaurant">
-                    <ul class="informations-restaurant">
-                        <li class="card-name">Sakura San</li>
-                        <li class="card-adress">Adresse : Bordeaux</li>
-                        <li class="card-specialities">Spécialités : Asiatique</li>
-                        <li class="card-hour">Heures d'ouvertures : midi</li>
-                        <li class="card-price">Fourchette de prix : 25€ - 50€</li>
-                        <li class="card-rating">Note : ❤️❤️❤️</li>
-                    </ul>
-                </article>
-            </section>
+            <article class="card-restaurant">
+                <img src="" alt="">
+                <h3>Sakuran San</h3>
+                <ul>
+                    <li id="card-name">Ville : Bordeaux</li>
+                    <li id="card-specialities">Spécialités : Asiatique</li>
+                    <li id="card-hour">Heures d'ouvertures : midi</li>
+                    <li id="card-price">Fourchette de prix : 25€ - 50€</li>
+                    <li id="card-rating">Note : ❤️❤️❤️</li>
+                </ul>
+            </article>
         </section>
             <section>
             <form id="add-restaurant">
