feat: style of filter and formulaire finalisation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="main-top">
             <details>
             <summary>Filtres</summary>
                 
@@ -58,7 +58,7 @@
                     </li>
                     <li class="li-form">
                         <input type="radio" id="radio-indienne" name="filter-radio" value="in">
-                        <label for="radio-indienne">Cuisine Indienne</label>
+                        <label for="radio-indienne">Cuisine indienne</label>
                     </li>
                     <li class="li-form">
                         <input type="radio" id="radio-veggie" name="filter-radio" value="ve">
@@ -130,9 +130,9 @@
         </section>
             <section>
             <form id="add-restaurant">
-                <fieldset>
+                <fieldset class="ul-form">
                     <h3 id="title-form">Une adresse à partager? Remplis ce formulaire.</h3>
-                <ul class="liste">
+                <ul class="ul-form">
                     <li class="li-form">
                         <label for="name" class="title-form">Nom du restaurant</label>
                         <input type="text" id="name" placeholder="ex: La fine bouche" class="input-formulaire">
