--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             <section class="cards">
                 <article class="card-restaurant">
                     <img src="https://images.pexels.com/photos/2098085/pexels-photo-2098085.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="assiette de sushis" class="picture-restaurant">
-                    <ul class="informations-restaurant">
-                        <li class="card-name">Sakura San</li>
-                        <li class="card-adress">Adresse : Bordeaux</li>
-                        <li class="card-specialities">Spécialités : Asiatique</li>
-                        <li class="card-hour">Heures d'ouvertures : midi</li>
-                        <li class="card-price">Fourchette de prix : 25€ - 50€</li>
-                        <li class="card-rating">Note : ❤️❤️❤️</li>
+                    <ul class="informations-restaurant" >
+                        <li class="list-informations">Dragon doré</li>
+                        <li class="list-informations">9 rue Paul Louis Lande</li>
+                        <li class="list-informations">>Cuisine asiatique</li>
+                        <li class="list-informations">Soir</li>
+                        <li class="list-informations">-25€</li>
+                        <li class="list-informations">❤️❤️❤️❤️</li>
                     </ul>
                 </article>
             </section>
