feat media query amandine

--- a/index.html
+++ b/index.html
@@ -16,23 +16,50 @@
 <body>
     <header>
         <h1>Crousti Eats</h1>
-        <img src=" " alt="">
+        <img src=" " alt="" />
         <nav id="top3">
-            <h2>Top 3 des meilleures adresses bordelaises</h2>
-            <section>
-                <article class="restaurant1-3">
-                    <img src="" alt="">
-                    <p></p>
-                </article>
-                <article id="restaurant2">
-                    <img src="" alt="">
-                    <p></p>
-                </article>
-                <article class="restaurant1-3">
-                    <img src="" alt="">
-                    <p></p>
-                </article>
-            </section>
+        <h2>Top 3 des meilleures adresses bordelaises</h2>
+        <section>
+            <article class="restaurant1-3">
+            <img
+                src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
+                alt="photo de pignon de poulet"
+            />
+            <div class="header-text">
+                <h3>nom du restaurant</h3>
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Delectus, veritatis.
+                </p>
+            </div>
+            </article>
+            <article id="restaurant2">
+            <img
+                src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
+                alt="Temporaire"
+            />
+            <div class="header-text">
+                <h3>nom du restaurant</h3>
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                illo?
+                </p>
+            </div>
+            </article>
+            <article class="restaurant1-3">
+            <img
+                src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
+                alt="Temporaire"
+            />
+            <div class="header-text">
+                <h3>nom du restaurant</h3>
+                <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui,
+                possimus?
+                </p>
+            </div>
+            </article>
+        </section>
         </nav>
     </header>
     <main>
@@ -118,12 +145,12 @@
                 <article class="card-restaurant">
                     <img src="https://images.pexels.com/photos/2098085/pexels-photo-2098085.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="assiette de sushis" class="picture-restaurant">
                     <ul class="informations-restaurant">
-                        <li class="card-name">Sakura San</li>
-                        <li class="card-adress">Adresse : Bordeaux</li>
-                        <li class="card-specialities">Spécialités : Asiatique</li>
-                        <li class="card-hour">Heures d'ouvertures : midi</li>
-                        <li class="card-price">Fourchette de prix : 25€ - 50€</li>
-                        <li class="card-rating">Note : ❤️❤️❤️</li>
+                        <li class="list-informations">Sakura San</li>
+                        <li class="list-informations">Adresse : Bordeaux</li>
+                        <li class="list-informations">Spécialités : Asiatique</li>
+                        <li class="list-informations">Heures d'ouvertures : midi</li>
+                        <li class="list-informations">Fourchette de prix : 25€ - 50€</li>
+                        <li class="list-informations">Note : ❤️❤️❤️</li>
                     </ul>
                 </article>
             </section>
@@ -200,7 +227,7 @@
         <span>Image by <a>Pexel</a></span>
     </footer>
 
-<script src=".src/script.js"></script>
+<script src="src/script.js"></script>
 
 </body>
 
