fix: grid card bug

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
             <section class="cards">
                 <article class="card-restaurant">
                     <img src="https://images.pexels.com/photos/2098085/pexels-photo-2098085.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="assiette de sushis" class="picture-restaurant">
-                    <ul class="informations-restaurant">
-                        <li class="list-informations">Sakura San</li>
-                        <li class="list-informations">Adresse : Bordeaux</li>
-                        <li class="list-informations">Spécialités : Asiatique</li>
-                        <li class="list-informations">Heures d'ouvertures : midi</li>
-                        <li class="list-informations">Fourchette de prix : 25€ - 50€</li>
-                        <li class="list-informations">Note : ❤️❤️❤️</li>
+                    <ul class="informations-restaurant" >
+                        <li class="list-informations">Dragon doré</li>
+                        <li class="list-informations">9 rue Paul Louis Lande</li>
+                        <li class="list-informations">>Cuisine asiatique</li>
+                        <li class="list-informations">Soir</li>
+                        <li class="list-informations">-25€</li>
+                        <li class="list-informations">❤️❤️❤️❤️</li>
                     </ul>
                 </article>
             </section>
