feat: add style to title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+<head>
     <title>Crousti Eats | référencement des restaurants bordelais</title>
 
     <meta charset="UTF-8" />
@@ -12,10 +12,13 @@
     <link rel="stylesheet" href="./src/style.css" />
 </head>
 
-  <body>
+<body>
     <header>
         <h1>Crousti Eats</h1>
-        <img src=" " alt="" />
+        <section id ="banniere">
+            <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"   alt="assiette de crudités" id="image-banniere">
+        </section>
+
         <nav id="top3">
         <h2>Top 3 des meilleures adresses bordelaises</h2>
         <section>
@@ -222,10 +225,10 @@
     </main>
 
     <footer>
-      <span>Team des semi-croustillant</span>
-      <span>Image by <a>Pexel</a></span>
+    <span>Team des semi-croustillant</span>
+    <span>Image by <a>Pexel</a></span>
     </footer>
 
     <script src="src/script.js"></script>
-  </body>
+</body>
 </html>
