feat: formulaire mis en place

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <ul class="informations-restaurant" >
                         <li class="list-informations">Dragon doré</li>
                         <li class="list-informations">9 rue Paul Louis Lande</li>
-                        <li class="list-informations">>Cuisine asiatique</li>
+                        <li class="list-informations">Cuisine asiatique</li>
                         <li class="list-informations">Soir</li>
                         <li class="list-informations">-25€</li>
                         <li class="list-informations">❤️❤️❤️❤️</li>
