--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             />
             <div class="header-text">
                 <h3>sakura san</h3>
-                <p class="top3-adresse">1 rue paul robert</p>
-                <p class="top3-rating">❤️❤️❤️❤️</p>
+                <ul>
+                    <li>1 rue paul robert</li>
+                    <li>Cuisine italienne</li>
+                    <li>❤️❤️❤️❤️</li>
+                </ul>
             </div>
             </article>
             <article id="restaurant2">
@@ -40,10 +43,11 @@
             />
             <div class="header-text">
                 <h3>nom du restaurant</h3>
-                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
-                illo?
-                </p>
+                <ul>
+                    <li>1 rue paul robert</li>
+                    <li>Cuisine italienne</li>
+                    <li>❤️❤️❤️❤️</li>
+                </ul>
             </div>
             </article>
             <article class="restaurant1-3">
@@ -53,10 +57,11 @@
             />
             <div class="header-text">
                 <h3>nom du restaurant</h3>
-                <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui,
-                possimus?
-                </p>
+                <ul>
+                    <li>1 rue paul robert</li>
+                    <li>Cuisine italienne</li>
+                    <li>❤️❤️❤️❤️</li>
+                </ul>
             </div>
             </article>
         </section>
@@ -158,7 +163,7 @@
             <section>
             <form id="add-restaurant" method="post">
                 <fieldset class="ul-form">
-                    <h3 id="title-form">Une adresse à partager? Remplis ce formulaire.</h3>
+                    <h3 id="title-form">Une adresse à partager ? Veuillez remplis ce formulaire.</h3>
                 <ul class="ul-form">
                     <li class="li-form">
                         <label for="name" class="title-form">Nom du restaurant</label>
@@ -219,7 +224,7 @@
                 </fieldset>
             </form>
             </section>
-        <button><a>Retour en haut</a></button>    
+            <button class= "btnHautdePage"a>Retour en haut</a></button>  
     </main>
 
     <footer>
