added js elements

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 />
               </li>
             </ul>
-            <button id="validate-form">Valider</button>
+            <button type="submit" id="validate-form">Valider</button>
           </fieldset>
         </form>
       </section>
