feat: New buttons

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     type="radio"
                     id="radio-français"
                     name="filter-radio"
-                    value="fr"
+                    value="Terroir français"
                   />
                   <label for="radio-français">Terroir français</label>
                 </li>
@@ -93,7 +93,7 @@
                     type="radio"
                     id="radio-italienne"
                     name="filter-radio"
-                    value="it"
+                    value="Cuisine italienne"
                   />
                   <label for="radio-italienne">Cuisine italienne</label>
                 </li>
@@ -102,7 +102,7 @@
                     type="radio"
                     id="radio-chinoise"
                     name="filter-radio"
-                    value="ch"
+                    value="Cuisine chinoise"
                   />
                   <label for="radio-chinoise">Cuisine chinoise</label>
                 </li>
@@ -111,7 +111,7 @@
                     type="radio"
                     id="radio-indienne"
                     name="filter-radio"
-                    value="in"
+                    value="Cuisine indienne"
                   />
                   <label for="radio-indienne">Cuisine indienne</label>
                 </li>
@@ -120,7 +120,7 @@
                     type="radio"
                     id="radio-veggie"
                     name="filter-radio"
-                    value="ve"
+                    value="Cuisine veggie"
                   />
                   <label for="radio-veggie">Cuisine veggie</label>
                 </li>
@@ -132,7 +132,7 @@
                     type="radio"
                     id="radio-4love"
                     name="filter-radio"
-                    value="4love"
+                    value="❤️❤️❤️❤️"
                   />
                   <label for="radio-4love">❤️❤️❤️❤️</label>
                 </li>
@@ -141,7 +141,7 @@
                     type="radio"
                     id="radio-3love"
                     name="filter-radio"
-                    value="3love"
+                    value="❤️❤️❤️"
                   />
                   <label for="radio-3love">❤️❤️❤️</label>
                 </li>
@@ -150,7 +150,7 @@
                     type="radio"
                     id="radio-2love"
                     name="filter-radio"
-                    value="2love"
+                    value="❤️❤️"
                   />
                   <label for="radio-2love">❤️❤️</label>
                 </li>
@@ -159,7 +159,7 @@
                     type="radio"
                     id="radio-1love"
                     name="filter-radio"
-                    value="1love"
+                    value="❤️"
                   />
                   <label for="radio-1love">❤️</label>
                 </li>
@@ -171,7 +171,7 @@
                     type="radio"
                     id="radio-midi"
                     name="filter-radio"
-                    value="midi"
+                    value="Midi"
                   />
                   <label for="radio-midi">Midi</label>
                 </li>
@@ -180,7 +180,7 @@
                     type="radio"
                     id="radio-soir"
                     name="filter-radio"
-                    value="soir"
+                    value="Soir"
                   />
                   <label for="radio-soir">Soir</label>
                 </li>
@@ -192,7 +192,7 @@
                     type="radio"
                     id="radio-moins25"
                     name="filter-radio"
-                    value="25"
+                    value="-25€"
                   />
                   <label for="radio-moins25">-25€</label>
                 </li>
@@ -201,7 +201,7 @@
                     type="radio"
                     id="radio-25-50"
                     name="filter-radio"
-                    value="25-50"
+                    value="25€-50€"
                   />
                   <label for="radio-25-50">25€-50€</label>
                 </li>
@@ -210,7 +210,7 @@
                     type="radio"
                     id="radio-plus50"
                     name="filter-radio"
-                    value="50"
+                    value="+50€"
                   />
                   <label for="radio-plus50">+50€</label>
                 </li>
@@ -339,12 +339,14 @@
           </fieldset>
         </form>
       </section>
-      <button class="btnHautdePage">Retour en haut</button>
+      <div id="buttonBottom">
+        <button class="btnHautdePage">Retour en haut</button>
+      </div>
     </main>
 
     <footer>
       <span>Team des semi-croustillant</span>
-      <span>Image by <a>Pexel</a></span>
+      <span>Image by <a>Pexel</a> </span>
     </footer>
 
     <script src="src/script.js"></script>
