feat : new restaurant and card fixes

--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
         <section>
           <article class="restaurant1-3">
             <img
-              src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
-              alt="photo de pignon de poulet"
+              src="https://images.pexels.com/photos/7363931/pexels-photo-7363931.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="Photo de Gyoza"
             />
             <div class="header-text">
-              <h3>sakura san</h3>
+              <h3>Dragon Doré</h3>
               <ul>
-                <li>1 rue paul robert</li>
-                <li>Cuisine italienne</li>
+                <li>9 rue Paul Louis Lande</li>
+                <li>Cuisine chinoise</li>
                 <li>❤️❤️❤️❤️</li>
               </ul>
             </div>
           </article>
           <article id="restaurant2">
             <img
-              src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
+              src="https://img.freepik.com/photos-premium/close-up-confit-canard-assiette-porcelaine-blanche-plat-traditionnel-francais-pattes-canard-cuites-lentement-garnies-feuilles-rogues-carte-visite-cuisine-francaise_124865-42395.jpg?w=826"
               alt="Temporaire"
             />
             <div class="header-text">
-              <h3>nom du restaurant</h3>
+              <h3>Arcada</h3>
               <ul>
-                <li>1 rue paul robert</li>
-                <li>Cuisine italienne</li>
+                <li>13 rue de la Rousselle</li>
+                <li>Terroir français</li>
                 <li>❤️❤️❤️❤️</li>
               </ul>
             </div>
           </article>
           <article class="restaurant1-3">
             <img
-              src="https://img.freepik.com/premium-photo/baked-chicken-drumstick-with-orange-smoked-paprika-provencal-herbs-olive-oil_948265-264316.jpg?w=826"
+              src="https://images.pexels.com/photos/7627443/pexels-photo-7627443.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               alt="Temporaire"
             />
             <div class="header-text">
-              <h3>nom du restaurant</h3>
+              <h3>Le Bouchon Bordelais</h3>
               <ul>
-                <li>1 rue paul robert</li>
-                <li>Cuisine italienne</li>
+                <li>2 rue Courbin</li>
+                <li>Terroir français</li>
                 <li>❤️❤️❤️❤️</li>
               </ul>
             </div>
