--- a/index.html
+++ b/index.html
@@ -72,77 +72,84 @@
             <details>
             <summary>Filtres</summary>
                 
-                <form>
+                <form id="filter-form">
                 <fieldset id="filter-restaurants">
+                        
                     <h3 class="title-filter">Spécialités</h3>
                     <ul class="ul-liste">
                     <li class="li-form">
-                        <input type="radio" id="radio-français" name="filter-radio" value="fr">
+                        <input type="radio" id="radio-français" name="filter-radio" value="Terroir français">
                         <label for="radio-français">Terroir français</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-italienne" name="filter-radio" value="it">
+                        <input type="radio" id="radio-italienne" name="filter-radio" value="Cuisine italienne">
                         <label for="radio-italienne">Cuisine italienne</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-chinoise" name="filter-radio" value="ch">
+                        <input type="radio" id="radio-chinoise" name="filter-radio" value="Cuisine chinoise">
                         <label for="radio-chinoise">Cuisine chinoise</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-indienne" name="filter-radio" value="in">
+                        <input type="radio" id="radio-indienne" name="filter-radio" value="Cuisine indienne">
                         <label for="radio-indienne">Cuisine indienne</label>
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-veggie" name="filter-radio" value="ve">
+                        <input type="radio" id="radio-veggie" name="filter-radio" value="Cuisine veggie">
                         <label for="radio-veggie">Cuisine veggie</label>
                     </li>
                 </ul>
                 <h3 class="title-filter">Notes</h3>
                 <ul class="ul-liste">
                     <li class="li-form">
-                        <input type="radio" id="radio-4love" name="filter-radio" value="4love">
+                        <input type="radio" id="radio-4love" name="filter-radio" value="❤️❤️❤️❤️">
                         <label for="radio-4love">❤️❤️❤️❤️</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-3love" name="filter-radio" value="3love">
+                        <input type="radio" id="radio-3love" name="filter-radio" value="❤️❤️❤️">
                         <label for="radio-3love">❤️❤️❤️</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-2love" name="filter-radio" value="2love">
+                        <input type="radio" id="radio-2love" name="filter-radio" value="❤️❤️">
                         <label for="radio-2love">❤️❤️</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-1love" name="filter-radio" value="1love">
+                        <input type="radio" id="radio-1love" name="filter-radio" value="❤️">
                         <label for="radio-1love">❤️</label> 
                     </li>
                 </ul>
                 <h3 class="title-filter">Heures d'ouverture</h3>
                 <ul class="ul-liste">
                     <li class="li-form">
-                        <input type="radio" id="radio-midi" name="filter-radio" value="midi">
+                        <input type="radio" id="radio-midi" name="filter-radio" value="Midi">
                         <label for="radio-midi">Midi</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-soir" name="filter-radio" value="soir">
+                        <input type="radio" id="radio-soir" name="filter-radio" value="Soir">
                         <label for="radio-soir">Soir</label> 
                     </li>
                 </ul>
                 <h3 class="title-filter">Fourchette de prix</h3>
                 <ul class="ul-liste">
                     <li class="li-form">
-                        <input type="radio" id="radio-moins25" name="filter-radio" value="25">
+                        <input type="radio" id="radio-moins25" name="filter-radio" value="+25€">
                         <label for="radio-moins25">-25€</label> 
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-25-50" name="filter-radio" value="25-50">
+                        <input type="radio" id="radio-25-50" name="filter-radio" value="25€-50€">
                         <label for="radio-25-50">25€-50€</label>
                     </li>
                     <li class="li-form">
-                        <input type="radio" id="radio-plus50" name="filter-radio" value="50">
+                        <input type="radio" id="radio-plus50" name="filter-radio" value="+50€">
                         <label for="radio-plus50">+50€</label>
                     </li>
+                </ul> 
+                <ul>
+                    <li class="li-form" id="no-filter">
+                    <input type="radio" id="radio-français" name="filter-radio" value="Terroir français">
+                    <label for="radio-français">Pas de filtres</label>
+                    </li>
                 </ul>
-                <button id="validate-filter">Valider</button>
+                    <button id="validate-filter" type="submit">Valider</button>
             </fieldset>
             </form>
             </details>
@@ -224,7 +231,7 @@
                 </fieldset>
             </form>
             </section>
-            <button class= "btnHautdePage"a>Retour en haut</a></button>  
+            <button class= "btnHautdePage" >Retour en haut</button>  
     </main>
 
     <footer>
