feat: the restaurant add by user are now filtred

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h3 class="title-filter">Fourchette de prix</h3>
                 <ul class="ul-liste">
                     <li class="li-form">
-                        <input type="radio" id="radio-moins25" name="filter-radio" value="+25€">
+                        <input type="radio" id="radio-moins25" name="filter-radio" value="-25€">
                         <label for="radio-moins25">-25€</label> 
                     </li>
                     <li class="li-form">
