--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
     <footer>
       <span>Team des semi-croustillant</span>
-      <span>Image by <a>Pexel</a> </span>
+      <span>Image by <a href="https://www.pexels.com/fr-fr/">Pexel</a> </span>
     </footer>
 
     <script src="src/script.js"></script>
