feat: add favivon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <title>Crousti Eats | référencement des restaurants bordelais</title>
 
+    <link rel="icon" type="image/x-icon" href="/public/images/favicon.png">
+
     <meta charset="UTF-8" />
     <meta http-esquiv="-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="160carac" />
+    <meta name="description" content="Un site dédié aux restaurants de Bordeaux propose des avis, des menus et des informations pratiques pour découvrir la gastronomie locale et choisir l'endroit idéal." />
 
     <link rel="stylesheet" href="./src/style.css" />
   </head>
@@ -251,7 +253,7 @@
         <form id="add-restaurant" method="post">
           <fieldset class="ul-form">
             <h3 id="title-form">
-              Une adresse à partager ? Veuillez remplis ce formulaire.
+              Une adresse à partager ? Veuillez remplir ce formulaire.
             </h3>
             <ul class="ul-form">
               <li class="li-form">
@@ -356,7 +358,7 @@
 
     <footer>
       <span>Team des semi-croustillant</span>
-      <span>Image by <a>Pexel</a> </span>
+      <span>Image by <a href="https://fr.freepik.com/">Pexel</a> </span>
     </footer>
 
     <script src="src/script.js"></script>
